Prevent zoom on iOS (set font-size to 16px)

--- a/dynamic-resources/css/styles.css
+++ b/dynamic-resources/css/styles.css
@@ -4,6 +4,10 @@
   color: transparent!important;
 }
 
+input {
+  font-size: 16px;
+}
+
 .panel {
   border-color: #cfd9D7;
   border-radius: 2px;
